# mcp-diffusers

./: README.md  docker-compose.storage.yml  docker-compose.zimage.yml  env.template
mcp-zimage/: .gitignore  Dockerfile  README.md  _run.sh  _stop.sh  env.template  pyproject.toml
mcp-zimage/src/: inference.py  server.py  storage.py
