[project]
name = "mcp-zimage"
version = "1.0.0"
description = "Z-Image MCP Server"

authors = [
    {name = "Park Dongseok",email = "pds0309@github.com"}
]

requires-python = ">=3.12,<3.15"
dependencies = [
    "diffusers (>=0.36.0,<0.37.0)",
    "transformers (>=5.1.0,<6.0.0)",
    "accelerate (>=1.12.0,<2.0.0)",
    "minio (>=7.2.20,<8.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "fastmcp (==3.0.0b2)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false